#15 Update UI, Stats Pages

--- a/client/src/app/pages/admin/management-tournament/management-tournament.component.html
+++ b/client/src/app/pages/admin/management-tournament/management-tournament.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="header--action">
 			<input type="text" placeholder="search" />
-			<button mat-raised-button color="warn">
+			<button mat-raised-button class="btn--bg-primary">
 				<i class="fa fa-search px-1" aria-hidden="true"></i>Search
 			</button>
 		</div>
