--- a/client/src/app/pages/layout/admin/layout/layout.component.html
+++ b/client/src/app/pages/layout/admin/layout/layout.component.html
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div class="admin--content">
-		<nav class="navbar topbar mb-4 static-top shadow">
+		<nav class="navbar topbar static-top shadow">
 			<ul class="sub-navbar ml-auto d-flex align-items-center gap-2">
 				<p class="fw-bold fs-6">Hi, {{ name }}</p>
 				<div class="action">
