--- a/client/src/app/pages/tournament/tournament.component.html
+++ b/client/src/app/pages/tournament/tournament.component.html
@@ -16,6 +16,6 @@
 </div>
 
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<router-outlet (activate)="loadTour()"></router-outlet>
 
 <app-footer></app-footer>
