--- a/client/src/app/shared/components/tour-card/tour-card.component.html
+++ b/client/src/app/shared/components/tour-card/tour-card.component.html
@@ -11,7 +11,9 @@
 			<div class="tour--quantity">
 				<i class="bx bxs-user"></i> {{ quantity }}
 			</div>
-			<div class="tour--view"><i class="bx bx-ghost"></i> {{ view }}</div>
+			<div class="tour--view">
+				<i class="fa-solid fa-eye"></i> {{ view }}
+			</div>
 		</div>
 	</div>
 </div>
