--- a/client/src/app/@auth/components/login/login.component.scss
+++ b/client/src/app/@auth/components/login/login.component.scss
@@ -6,7 +6,7 @@
 	align-items: center;
 	height: 100vh;
 	width: 100%;
-	background-color: $primary-dark;
+	background-color: $primary;
 }
 
 .login {
