--- a/client/src/app/pages/admin/dashboard/dashboard.component.scss
+++ b/client/src/app/pages/admin/dashboard/dashboard.component.scss
@@ -5,7 +5,7 @@
 		height: 100%;
 		width: 100%;
 		background-color: whitesmoke;
-
+		padding: 24px;
 		.card {
 			border-left: 8px solid #1cc88a;
 			display: flex;
