--- a/client/src/app/pages/admin/management-user/management-user.component.html
+++ b/client/src/app/pages/admin/management-user/management-user.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="header--action">
 			<input type="text" placeholder="search" />
-			<button mat-raised-button color="warn">
+			<button mat-raised-button class="btn--bg-primary">
 				<i class="fa fa-search px-1" aria-hidden="true"></i>Search
 			</button>
 		</div>
@@ -45,6 +45,24 @@
 					<th mat-header-cell *matHeaderCellDef>Role</th>
 					<td mat-cell *matCellDef="let element">
 						{{ element.role | roleName }}
+					</td>
+				</ng-container>
+
+				<ng-container matColumnDef="isActive">
+					<th mat-header-cell *matHeaderCellDef>Role</th>
+					<td mat-cell *matCellDef="let element">
+						<span *ngIf="element.isDeleted">
+							<i
+								class="fa-solid fa-circle"
+								style="color: #f91a1a"></i>
+							Non-Active</span
+						>
+						<span *ngIf="!element.isDeleted"
+							><i
+								class="fa-solid fa-circle"
+								style="color: #3cbb19"></i>
+							Active</span
+						>
 					</td>
 				</ng-container>
 
