--- a/client/src/app/pages/admin/style.scss
+++ b/client/src/app/pages/admin/style.scss
@@ -53,7 +53,6 @@
 				overflow-y: scroll;
 				height: 300px;
 			}
-			
 		}
 	}
 }
@@ -89,4 +88,9 @@
 			gap: 8px;
 		}
 	}
+}
+
+.btn--bg-primary {
+	background-color: $primary;
+	color: white;
 }
