--- a/client/src/app/pages/find-tournament/find-tournament.component.scss
+++ b/client/src/app/pages/find-tournament/find-tournament.component.scss
@@ -51,10 +51,8 @@
 				width: 100%;
 				font-size: 14px;
 				border: 1px solid rgb(154, 154, 154);
-
 				border-right-width: 0px;
 				height: 40px;
-
 				background-color: transparent;
 				color: $primary-dark;
 				outline: none;
@@ -64,9 +62,10 @@
 				display: flex;
 				align-items: center;
 				gap: 12px;
-				height: 38px;
+				height: 40px;
 				border-top-right-radius: 4px;
 				border-bottom-right-radius: 4px;
+				background-color: $primary;
 				cursor: pointer;
 				i {
 					color: white;
