--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -33,13 +33,57 @@
 		<h2>Giới thiệu</h2>
 		<div class="list--card">
 			<div class="row">
-				<div
-					class="col-lg-4 col-md-6 col-sm-12 mt-4"
-					*ngFor="let item of ListCardInfo">
-					<app-card-info
-						[title]="item.title"
-						[content]="item.content"
-						[classIcon]="item.classIcon"></app-card-info>
+				<div class="col-lg-4 col-md-6 col-sm-12 mt-4">
+					<div class="intro--card">
+						<div class="intro--card__img">
+							<img
+								src="../../../assets/images/machine-vision-svgrepo-com.svg"
+								alt="" />
+						</div>
+						<div class="intro--card__info">
+							<h4>Dễ dàng quản lý</h4>
+							<p>
+								CreateTour giúp bạn quản lý giải đấu bóng đá một
+								cách dễ dàng với giao diện trực quan.
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12 mt-4">
+					<div class="intro--card">
+						<div class="intro--card__img">
+							<img
+								src="../../../assets/images/host-record-svgrepo-com.svg"
+								alt="" />
+						</div>
+						<div class="intro--card__info">
+							<h4>Đa dạng hình thức thi đấu</h4>
+							<p>
+								CreateTour cung cấp nhiều thể thức thi đấu như
+								vòng tròn, đấu loại trực tiếp, và kết hợp, phù
+								hợp với mọi quy mô và nhu cầu của giải đấu.
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12 mt-4">
+					<div class="intro--card">
+						<div class="intro--card__img">
+							<img
+								src="../../../assets/images/mobile-app-svgrepo-com.svg"
+								alt="" />
+						</div>
+						<div class="intro--card__info">
+							<h4>Chia sẻ cho nhiều người theo dõi</h4>
+							<p>
+								CreateTour cho phép bạn dễ dàng chia sẻ thông
+								tin giải đấu, giúp người hâm mộ theo dõi diễn
+								biến.
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -47,48 +91,80 @@
 
 	<div class="home--guide container">
 		<h2>Hướng dẫn</h2>
-		<div class="list--card">
-			<div class="row mt-4">
-				<div class="col-1"></div>
-				<div class="col-2">
-					<div class="guide--card">
-						<span>1</span>
-						<p>Chọn loại môn và thể thức thi đấu</p>
-					</div>
+		<div class="list--guide">
+			<div class="guide--card">
+				<div class="guide--card__header">
+					<h4>1</h4>
+					<span
+						><i
+							class="fa fa-arrow-right fs-3"
+							aria-hidden="true"></i
+					></span>
 				</div>
-				<div class="col-2"></div>
-				<div class="col-2">
-					<div class="guide--card">
-						<span>3</span>
-						<p>Tùy chỉnh tên đội, thành viên trong đội</p>
-					</div>
-				</div>
-				<div class="col-2"></div>
-				<div class="col-2">
-					<div class="guide--card">
-						<span>5</span>
-						<p>Chia sẻ thông tin giải đấu với bạn bè</p>
-					</div>
+				<div class="guide--card__info">
+					<p>Chọn loại môn và thể thức thi đấu</p>
 				</div>
 			</div>
-			<div class="row mt-4">
-				<div class="col-1"></div>
 
-				<div class="col-2"></div>
-				<div class="col-2">
-					<div class="guide--card">
-						<span>2</span>
-						<p>Chọn số lượng đội tham gia giải</p>
-					</div>
+			<div class="guide--card">
+				<div class="guide--card__header">
+					<h4>2</h4>
+					<span
+						><i
+							class="fa fa-arrow-right fs-3"
+							aria-hidden="true"></i
+					></span>
 				</div>
-				<div class="col-2"></div>
-				<div class="col-2">
-					<div class="guide--card">
-						<span>4</span>
-						<p>Lên lịch thi đấu cho các trận</p>
-					</div>
+				<div class="guide--card__info">
+					<p>Chọn số lượng đội tham gia giải</p>
 				</div>
 			</div>
+
+			<div class="guide--card">
+				<div class="guide--card__header">
+					<h4>3</h4>
+					<span
+						><i
+							class="fa fa-arrow-right fs-3"
+							aria-hidden="true"></i
+					></span>
+				</div>
+				<div class="guide--card__info">
+					<p>Tùy chỉnh tên đội, thành viên trong đội</p>
+				</div>
+			</div>
+
+			<div class="guide--card">
+				<div class="guide--card__header">
+					<h4>4</h4>
+					<span
+						><i
+							class="fa fa-arrow-right fs-3"
+							aria-hidden="true"></i
+					></span>
+				</div>
+				<div class="guide--card__info">
+					<p>Lên lịch thi đấu cho các trận</p>
+				</div>
+			</div>
+
+			<div class="guide--card">
+				<div class="guide--card__header">
+					<h4>5</h4>
+					<span
+						><i class="fa fa-arrow-down fs-3" aria-hidden="true"></i
+					></span>
+				</div>
+				<div class="guide--card__info">
+					<p>Chia sẻ thông tin giải đấu với bạn bè</p>
+				</div>
+			</div>
+		</div>
+		<div class="guide--button">
+			<a [routerLink]="['/pages/create']"
+				>Tạo giải đấu của riêng bạn
+				<i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+			</a>
 		</div>
 	</div>
 
@@ -135,13 +211,6 @@
 				</ng-container>
 
 				<ng-container matColumnDef="startAt">
-					<th mat-header-cell *matHeaderCellDef>Địa chỉ</th>
-					<td mat-cell *matCellDef="let element">
-						{{ element.created | date }}
-					</td>
-				</ng-container>
-
-				<ng-container matColumnDef="finishAt">
 					<th mat-header-cell *matHeaderCellDef>Ngày bắt đầu</th>
 					<td mat-cell *matCellDef="let element">
 						{{ element.finishAt ?? "-" | date }}
