--- a/client/src/app/pages/layout/footer/footer.component.html
+++ b/client/src/app/pages/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="my-3">
+<div class="">
 	<!-- Footer -->
 	<footer
 		class="text-center text-lg-start text-white"
@@ -28,7 +28,7 @@
 		<div
 			class="text-center p-3"
 			style="background-color: rgba(0, 0, 0, 0.2)">
-			© 2023 Copyright:
+			© 2024 Copyright:
 			<a class="text-white" href="https://mdbootstrap.com/"
 				>createtour.com</a
 			>
