--- a/client/src/app/pages/tournament/bracket/bracket-card/bracket-card.component.scss
+++ b/client/src/app/pages/tournament/bracket/bracket-card/bracket-card.component.scss
@@ -26,7 +26,6 @@
 		align-items: center;
 		flex-direction: column;
 		gap: 12px;
-		padding: 12px;
 		background-color: white;
 	}
 
@@ -50,20 +49,21 @@
 	&--info {
 		display: flex;
 		flex-direction: column;
-		gap: 1rem;
 		width: 100%;
 		.team {
 			font-size: 18px;
-			color: $primary-medium;
+			color: $primary-light;
 			font-weight: 450;
 			text-align: center;
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-
+			padding: 8px 12px;
 			&.win {
-				color: $primary;
+				color: $primary-dark;
 			}
 		}
 	}
 }
+
+@include img-team;
