--- a/client/src/app/pages/tournament/navbar/navbar.component.scss
+++ b/client/src/app/pages/tournament/navbar/navbar.component.scss
@@ -3,7 +3,7 @@
 .tour--navbar--wrapper {
 	width: 100%;
 	height: 70px;
-	background-color: $primary-medium;
+	background-color: $primary-dark;
 }
 
 .tour--navbar {
@@ -33,11 +33,11 @@
 		font-weight: bold;
 
 		&:hover {
-			background-color: $primary;
+			background-color: $primary-medium;
 		}
 	}
 
 	&-active {
-		background-color: $primary;
+		background-color: $primary-medium;
 	}
 }
