--- a/client/src/app/pages/tournament/overview/form-edit-team/form-edit-team.component.html
+++ b/client/src/app/pages/tournament/overview/form-edit-team/form-edit-team.component.html
@@ -3,7 +3,7 @@
 		<h4>Thông tin đội tham gia</h4>
 		<button
 			type="button"
-			class="btn-close btn-white"
+			class="btn-close btn-close-white"
 			data-bs-dismiss="modal"
 			aria-label="Close"></button>
 	</div>
@@ -31,21 +31,24 @@
 	</div>
 	<div class="form-edit__actions">
 		<button
+			mat-raised-button
 			type="button"
-			class="btn btn-secondary-custom"
+			class="btn-secondary-custom"
 			data-bs-dismiss="modal">
 			Hủy
 		</button>
 		<button
+			mat-stroked-button
 			type="button"
-			class="btn btn-primary-custom"
+			class="btn-primary-custom text-white"
 			(click)="handleSave()"
 			data-bs-dismiss="modal">
 			Lưu
 		</button>
 		<button
+			mat-stroked-button
 			type="button"
-			class="btn btn-primary-custom"
+			class="btn-primary-custom text-white"
 			(click)="teamDetail()"
 			data-bs-dismiss="modal">
 			Xem chi tiết
