--- a/client/src/app/pages/tournament/stats/stats.component.scss
+++ b/client/src/app/pages/tournament/stats/stats.component.scss
@@ -21,13 +21,14 @@
 	}
 
 	&--card {
-		background-color: white;
 		height: 200px;
 		width: 350px;
 		padding: 24px;
 		display: flex;
 		flex-direction: column;
 		border-radius: 8px;
+		background-color: white;
+
 		.card {
 			&--header {
 				font-size: 20px;
@@ -50,7 +51,7 @@
 					}
 					.sub-info {
 						font-size: 16px;
-						color: $primary-light;
+						color: $primary-dark;
 					}
 				}
 				.img {
@@ -63,6 +64,10 @@
 					}
 				}
 			}
+		}
+
+		&:hover {
+			background-color: $primary-blue;
 		}
 	}
 }
@@ -77,13 +82,14 @@
 		gap: 24px;
 
 		.header {
-			display: inline-block;
-			margin-bottom: 24px;
 			h3 {
 				margin-bottom: 0;
 				font-size: 20px;
 				font-weight: bold;
-				color: $primary-dark;
+				color: white;
+				background-color: $primary-light;
+				text-align: center;
+				padding: 12px 24px;
 			}
 		}
 
@@ -128,6 +134,61 @@
 		}
 
 		.history {
+		}
+	}
+}
+
+.img-team--wrapper {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	img {
+		width: 100%;
+		display: block;
+	}
+}
+
+.top-score-card {
+	position: relative;
+	.img-logo--team {
+		position: absolute;
+		content: "";
+		top: 20%;
+		right: 40px;
+		width: 120px;
+		height: 120px;
+		border-radius: 50%;
+		overflow: hidden;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		opacity: 0;
+		transition: all 0.3s ease-in-out;
+		transform: translateX(30%);
+		img {
+			width: 100%;
+			display: block;
+			transition: all 0.1s ease-out;
+			opacity: 1;
+		}
+	}
+	transition: all 0.2s ease-in;
+	&:hover {
+		background-color: $primary-blue;
+
+		.img img {
+			display: none;
+			opacity: 0;
+		}
+
+		.img-logo--team {
+			z-index: 5;
+			opacity: 1;
+			transform: translateX(0%);
 		}
 	}
 }
