--- a/client/src/app/pages/tournament/tournament.component.scss
+++ b/client/src/app/pages/tournament/tournament.component.scss
@@ -7,7 +7,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background-color: $primary-medium;
+		background-color: $primary-dark;
 	}
 
 	&--info {
