--- a/client/src/app/pages/user/user.component.scss
+++ b/client/src/app/pages/user/user.component.scss
@@ -5,9 +5,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	background-color: $primary;
 }
 
 .user--form {
+	background-color: white;
 	width: 600px;
 	height: 450px;
 	padding: 24px 24px;
