--- a/client/src/app/shared/components/card-info/card-info.component.scss
+++ b/client/src/app/shared/components/card-info/card-info.component.scss
@@ -4,7 +4,7 @@
 		border-radius: 8px;
 		overflow: hidden;
 		width: 100%;
-		height: 100%;
+		height: 200px;
 		background-color: white;
 		display: flex;
 		align-items: center;
