--- a/client/src/app/shared/components/tour-card/tour-card.component.scss
+++ b/client/src/app/shared/components/tour-card/tour-card.component.scss
@@ -2,14 +2,20 @@
 
 .tour {
 	&-card {
-		background-color: $primary-light;
+		background-color: white;
 		padding: 24px;
 		border-radius: 8px;
 		transition: 0.2s ease-in;
+		box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 		cursor: pointer;
 		&:hover {
-			background-color: #f9b3ab;
+			background-color: $primary-blue;
 			transform: scale(102%);
+		}
+		&:hover {
+			.tour--des {
+				color: white;
+			}
 		}
 	}
 
@@ -25,6 +31,7 @@
 	}
 
 	&--des {
+		color: $primary-dark;
 		text-align: center;
 		margin-top: 12px;
 	}
@@ -32,13 +39,11 @@
 	&--name {
 		font-size: 22px;
 		font-weight: bold;
-		color: white;
 	}
 
 	&--info {
 		font-size: 14px;
 		font-weight: 450;
-		color: white;
 	}
 	&--footer {
 		margin-top: 12px;
@@ -46,6 +51,5 @@
 		align-items: center;
 		justify-content: space-between;
 		gap: 24px;
-		color: white;
 	}
 }
