--- a/client/src/app/shared/variable.scss
+++ b/client/src/app/shared/variable.scss
@@ -1,18 +1,25 @@
-$primary-dark: #1b2733;
-$primary: #e74c3c;
-$primary-medium: #2c3f52;
-$primary-light: #43515e;
+$primary-dark: #00004b;
+$primary: #363683;
+$primary-medium: #61619f;
+$primary-light: rgb(99, 120, 141);
+$primary-blue: rgb(92, 138, 255);
 $white-smoke: rgb(244, 244, 244);
 $text-size: 16px;
 
 // $primary-dark: #8a6d2f;
-// $primary: #fac960;
+$primary-yellow: #fac960;
 // $primary-medium: #8a6d2f;
 // $primary-light: white;
 
 * {
 	text-decoration: none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p,
 ul,
 ol {
@@ -34,7 +41,7 @@ body {
 
 .input-focus-effect input {
 	padding: 25px 10px 10px;
-	border: 1px solid $primary;
+	border: 1px solid $primary-medium;
 	border-right-width: 0px;
 	display: block;
 	width: 100%;
@@ -48,13 +55,13 @@ body {
 }
 
 .input-focus-effect input:focus {
-	border-color: $primary;
+	border-color: $primary-dark;
 }
 
 .input-focus-effect input:focus + label,
 .input-focus-effect input:not(:placeholder-shown) + label {
 	transform: translateY(-25px);
-	background-color: $primary-dark;
+	background-color: $primary;
 
 	top: 10px;
 }
@@ -92,16 +99,25 @@ body {
 // Animation
 @keyframes showToptoBot {
 	0% {
-		height: 0;
+		height: 0%;
+	}
+	10% {
+		height: 10%;
 	}
 	25% {
-		height: 20px;
+		height: 20%;
+	}
+	40% {
+		height: 30%;
 	}
 	50% {
-		height: 40px;
+		height: 40%;
+	}
+	75% {
+		height: 50%;
 	}
 	100% {
-		height: 60px;
+		height: 100%;
 	}
 }
 
@@ -121,4 +137,31 @@ body {
 	100% {
 		width: 100%;
 	}
+}
+
+@mixin img-team {
+	.team {
+		&--img {
+			width: 30px;
+			height: 30px;
+			border-radius: 50%;
+			overflow: hidden;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			img {
+				width: 100%;
+				display: block;
+			}
+		}
+	}
+}
+
+@mixin bg-gradient {
+	background: rgb(104, 117, 182);
+	background: radial-gradient(
+		circle,
+		rgba(104, 117, 182, 1) 0%,
+		rgba(51, 62, 191, 1) 100%
+	);
 }
