#15 Done UI/UX ver 1

--- a/client/src/app/pages/admin/management-sport-type/management-sport-type.component.html
+++ b/client/src/app/pages/admin/management-sport-type/management-sport-type.component.html
@@ -2,14 +2,17 @@
 	<header class="header--wrapper">
 		<div class="header--top">
 			<h2 class="mb-0">Sport Type</h2>
-			<button mat-raised-button color="warn" (click)="openEditDialog(0)">
+			<button
+				mat-raised-button
+				class="btn--bg-primary"
+				(click)="openEditDialog(0)">
 				<i class="fa fa-plus-circle px-1" aria-hidden="true"></i> Add
 				new sport
 			</button>
 		</div>
 		<div class="header--action">
 			<input type="text" placeholder="search" />
-			<button mat-raised-button color="warn">
+			<button mat-raised-button class="btn--bg-primary">
 				<i class="fa fa-search px-1" aria-hidden="true"></i>Search
 			</button>
 		</div>
