--- a/client/src/app/pages/tournament/bracket/bracket-card/form-edit-stats/form-edit-stats.component.html
+++ b/client/src/app/pages/tournament/bracket/bracket-card/form-edit-stats/form-edit-stats.component.html
@@ -125,17 +125,16 @@
 
 		<div class="form-edit__actions">
 			<button
-				mat-stroked-button
+				mat-button
 				type="button"
-				class="btn btn-secondary-custom"
+				class="btn-outline-primary-custom"
 				mat-dialog-close>
 				Hủy
 			</button>
 			<button
-				mat-raised-button
-				color="warn"
+				mat-button
 				type="button"
-				class="btn btn-primary-custom"
+				class="btn-primary-custom"
 				(click)="handleSave()"
 				[disabled]="false">
 				Lưu
