--- a/client/src/app/pages/tournament/overview/overview.component.scss
+++ b/client/src/app/pages/tournament/overview/overview.component.scss
@@ -1,7 +1,7 @@
 @import "../../../shared/variable.scss";
 .overview {
 	&--wrapper {
-		padding: 24px 48px;
+		padding: 48px;
 		background-color: $white-smoke;
 		min-height: 100vh;
 	}
