--- a/client/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/client/src/app/shared/components/dropdown/dropdown.component.scss
@@ -15,7 +15,7 @@
 	&--list {
 		position: absolute;
 		z-index: 5;
-		animation: showToptoBot 0.3s;
+		animation: showToptoBot 0.15s;
 		width: 100%;
 		background-color: $primary-light;
 		.item {
@@ -23,7 +23,7 @@
 			cursor: pointer;
 			transition: 0.2s ease-in;
 			&:hover {
-				background-color: $primary;
+				background-color: $primary-blue;
 			}
 		}
 	}
