--- a/client/src/app/pages/mytour/modal-delete/modal-delete.component.html
+++ b/client/src/app/pages/mytour/modal-delete/modal-delete.component.html
@@ -11,7 +11,7 @@
 					aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p>Bạn không thể khôi phục dữ liệu sau khi xóa</p>
+				<p>Bạn không thể khôi phục sau khi xóa</p>
 			</div>
 			<div class="modal-footer">
 				<button
@@ -26,7 +26,7 @@
 					mat-raised-button
 					color="warn"
 					(click)="onSubmit()">
-					Xóa
+					Xác nhận
 				</button>
 			</div>
 		</div>
