--- a/client/src/app/pages/mytour/mytour.component.html
+++ b/client/src/app/pages/mytour/mytour.component.html
@@ -45,27 +45,14 @@
 					<td mat-cell *matCellDef="let element">
 						<div class="action d-flex gap-4 align-items-center">
 							<i
-								class="bx bx-detail fs-4"
+								class="fa-solid fa-circle-info fs-5"
 								matTooltip="Xem chi tiết"
 								(click)="detailTour(element.id)"></i>
 
 							<i
-								class="bx bxs-box fs-4"
+								class="fa-solid fa-trash fs-5"
 								matTooltip="Xóa giải đấu"
-								data-bs-toggle="modal"
-								data-bs-target="#deleteConfirmModal"></i>
-
-							<!-- Modal -->
-							<div
-								class="modal fade"
-								id="deleteConfirmModal"
-								tabindex="-1"
-								aria-labelledby="exampleModalLabel"
-								aria-hidden="true">
-								<div class="modal-dialog modal-dialog-centered">
-									<div class="modal-content"></div>
-								</div>
-							</div>
+								(click)="openDeleteDialog(element.id)"></i>
 						</div>
 					</td>
 				</ng-container>
