--- a/client/src/app/pages/tournament/bracket/bracket-card/form-edit-result/form-edit-result.component.html
+++ b/client/src/app/pages/tournament/bracket/bracket-card/form-edit-result/form-edit-result.component.html
@@ -48,12 +48,17 @@
 	</div>
 
 	<div class="form-edit__actions">
-		<button type="button" class="btn btn-secondary-custom" mat-dialog-close>
+		<button
+			mat-button
+			type="button"
+			class="btn-outline-primary-custom"
+			mat-dialog-close>
 			Hủy
 		</button>
 		<button
+			mat-button
 			type="button"
-			class="btn btn-primary-custom"
+			class="btn-primary-custom"
 			(click)="handleSave()"
 			[disabled]="!editResult.valid">
 			Lưu
