--- a/client/src/app/pages/tournament/stats/stats.component.html
+++ b/client/src/app/pages/tournament/stats/stats.component.html
@@ -77,7 +77,7 @@
 <div class="stats--wrapper">
 	<div class="team-stats" *ngIf="listMatchResult.length !== 0">
 		<div class="header">
-			<h3>Chỉ số đội</h3>
+			<h3>Thông số đội</h3>
 		</div>
 
 		<h4
@@ -214,7 +214,7 @@
 	</div>
 	<div class="player-stats">
 		<div class="header">
-			<h3>Chỉ số thành viên</h3>
+			<h3>Thông số thành viên</h3>
 		</div>
 		<h4
 			*ngIf="playerStats.length === 0"
