--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -35,8 +35,10 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6 col-sm-12 mt-4">
 					<div class="intro--card">
-						<div class="intro--card__img">
+						<div
+							class="intro--card__img d-flex align-items-center justify-content-center">
 							<img
+								class="d-block"
 								src="../../../assets/images/machine-vision-svgrepo-com.svg"
 								alt="" />
 						</div>
