--- a/client/src/app/pages/tournament/bracket/bracket-card/form-edit-info/form-edit-info.component.scss
+++ b/client/src/app/pages/tournament/bracket/bracket-card/form-edit-info/form-edit-info.component.scss
@@ -9,3 +9,10 @@
 		font-weight: bold;
 	}
 }
+
+.swap-team {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 24px;
+}
