--- a/client/src/app/pages/tournament/stats/stats.component.html
+++ b/client/src/app/pages/tournament/stats/stats.component.html
@@ -128,7 +128,7 @@
 						mat-header-cell
 						*matHeaderCellDef
 						sortActionDescription="Sort by weight">
-						<span class="fs-6" (click)="onSort(0)"
+						<span class="fs-6" (click)="onSortTeamStats(0)"
 							>Bàn thắng
 							<i
 								class="fa fa-arrow-down px-1"
@@ -157,7 +157,7 @@
 						mat-header-cell
 						*matHeaderCellDef
 						sortActionDescription="Sort by symbol">
-						<span class="fs-6" (click)="onSort(1)"
+						<span class="fs-6" (click)="onSortTeamStats(1)"
 							>Thẻ đỏ
 							<i
 								class="fa fa-arrow-down px-1"
@@ -183,7 +183,7 @@
 				<!-- Symbol Column -->
 				<ng-container matColumnDef="yellowCard">
 					<th mat-header-cell *matHeaderCellDef>
-						<span (click)="onSort(2)" class="fs-6"
+						<span (click)="onSortTeamStats(2)" class="fs-6"
 							>Thẻ vàng<i
 								class="fa fa-arrow-down px-1"
 								aria-hidden="true"
@@ -263,7 +263,23 @@
 						mat-header-cell
 						*matHeaderCellDef
 						sortActionDescription="Sort by weight">
-						Bàn thắng
+						<span class="fs-6" (click)="onSortPlayerStats(0)"
+							>Bàn thắng
+							<i
+								class="fa fa-arrow-down px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === true &&
+									this.sortIndex == 0
+								"></i>
+							<i
+								class="fa fa-arrow-up px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === false &&
+									this.sortIndex == 0
+								"></i
+						></span>
 					</th>
 					<td mat-cell *matCellDef="let element">
 						{{ element.stats.score }}
@@ -276,7 +292,23 @@
 						mat-header-cell
 						*matHeaderCellDef
 						sortActionDescription="Sort by symbol">
-						Kiến tạo
+						<span class="fs-6" (click)="onSortPlayerStats(1)"
+							>Kiến tạo
+							<i
+								class="fa fa-arrow-down px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === true &&
+									this.sortIndex == 1
+								"></i>
+							<i
+								class="fa fa-arrow-up px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === false &&
+									this.sortIndex == 1
+								"></i
+						></span>
 					</th>
 					<td mat-cell *matCellDef="let element">
 						{{ element.stats.assists }}
@@ -289,7 +321,23 @@
 						mat-header-cell
 						*matHeaderCellDef
 						sortActionDescription="Sort by symbol">
-						Thẻ đỏ
+						<span class="fs-6" (click)="onSortPlayerStats(2)"
+							>Thẻ đỏ
+							<i
+								class="fa fa-arrow-down px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === true &&
+									this.sortIndex == 2
+								"></i>
+							<i
+								class="fa fa-arrow-up px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === false &&
+									this.sortIndex == 2
+								"></i
+						></span>
 					</th>
 					<td mat-cell *matCellDef="let element">
 						{{ element.stats.redCard }}
@@ -302,7 +350,23 @@
 						mat-header-cell
 						*matHeaderCellDef
 						sortActionDescription="Sort by symbol">
-						Thẻ vàng
+						<span class="fs-6" (click)="onSortPlayerStats(3)"
+							>Thẻ vàng
+							<i
+								class="fa fa-arrow-down px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === true &&
+									this.sortIndex == 3
+								"></i>
+							<i
+								class="fa fa-arrow-up px-1"
+								aria-hidden="true"
+								*ngIf="
+									this.tablePlayerStats.asc === false &&
+									this.sortIndex == 3
+								"></i
+						></span>
 					</th>
 					<td class="py-3" mat-cell *matCellDef="let element">
 						{{ element.stats.yellowCard }}
@@ -314,6 +378,16 @@
 					mat-row
 					*matRowDef="let row; columns: displayedColumns"></tr>
 			</table>
+		</div>
+		<div class="table--pagination">
+			<table-pagination
+				[_hasNext]="this.tablePlayerStats.hasNext"
+				[_hasPrev]="this.tablePlayerStats.hasPrev"
+				[_currentPage]="this.tablePlayerStats.currentPage"
+				[_totalPage]="this.tablePlayerStats.totalPage"
+				(changePage)="
+					onChangePagePlayerStats($event)
+				"></table-pagination>
 		</div>
 	</div>
 </div>
